--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -11,7 +11,7 @@
 				<key>APSN</key>
 				<false/>
 				<key>PluginType</key>
-				<true/>
+				<false/>
 				<key>PStates</key>
 				<false/>
 				<key>APLF</key>
@@ -43,31 +43,11 @@
 			<array>
 				<dict>
 					<key>Find</key>
-					<data>RUhDMQ==</data>
-					<key>Replace</key>
-					<data>RUgwMQ==</data>
-					<key>Disabled</key>
-					<false/>
-					<key>Comment</key>
-					<string>change EHC1 to EH01</string>
-				</dict>
-				<dict>
-					<key>Find</key>
-					<data>RUhDMg==</data>
-					<key>Replace</key>
-					<data>RUgwMg==</data>
-					<key>Disabled</key>
-					<false/>
-					<key>Comment</key>
-					<string>change EHC2 to EH02</string>
-				</dict>
-				<dict>
-					<key>Find</key>
 					<data>RVVTQg==</data>
 					<key>Replace</key>
 					<data>RUgwMQ==</data>
 					<key>Disabled</key>
-					<false/>
+					<true/>
 					<key>Comment</key>
 					<string>change EUSB to EH01</string>
 				</dict>
@@ -77,7 +57,7 @@
 					<key>Replace</key>
 					<data>RUgwMg==</data>
 					<key>Disabled</key>
-					<false/>
+					<true/>
 					<key>Comment</key>
 					<string>change USBE to EH02</string>
 				</dict>
@@ -87,7 +67,7 @@
 					<key>Replace</key>
 					<data>WEhDXw==</data>
 					<key>Disabled</key>
-					<false/>
+					<true/>
 					<key>Comment</key>
 					<string>change XHCI to XHC</string>
 				</dict>
@@ -97,7 +77,7 @@
 					<key>Replace</key>
 					<data>TFBDQg==</data>
 					<key>Disabled</key>
-					<false/>
+					<true/>
 					<key>Comment</key>
 					<string>change LPC to LPCB</string>
 				</dict>
@@ -123,7 +103,7 @@
 				<key>FixRTC</key>
 				<false/>
 				<key>AddDTGP</key>
-				<true/>
+				<false/>
 				<key>DeleteUnused</key>
 				<false/>
 				<key>FixHDA</key>
@@ -141,7 +121,7 @@
 			<false/>
 		</dict>
 		<key>AutoMerge</key>
-		<true/>
+		<false/>
 		<key>HaltEnabler</key>
 		<false/>
 		<key>FixHeaders</key>
@@ -162,7 +142,7 @@
 		<key>Debug</key>
 		<false/>
 		<key>Arguments</key>
-		<string>-xcpm kext-dev-mode=1 -v</string>
+		<string>-v</string>
 		<key>CustomLogo</key>
 		<false/>
 		<key>XMPDetection</key>
@@ -208,12 +188,12 @@
 			<key>PciRoot(0x0)/Pci(0x1B,0x0)</key>
 			<dict>
 				<key>layout-id</key>
-				<integer>3</integer>
+				<integer>28</integer>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL0(0,1,2... display number),override-no-connect</key>
-				<data></data>
+				<data>AP///////wAGrzwyAAAAAAAXAQSVHxF4Aq/lllhTiiYkUFQAAAABAQEBAQEBAQEBAQEBAQEBzh1W4lAAHjAmFjYANa0QAAAYAAAADwAAAAAAAAAAAAAAAAAgAAAA/gBBVU8KICAgICAgICAgAAAA/gBCMTQwWFROMDMuMiAKAPY=</data>
 				<key>device-id</key>
 				<data>ZgEAAA==</data>
 				<key>AAPL,ig-platform-id</key>
